--- a/resources/style.css
+++ b/resources/style.css
@@ -43,7 +43,7 @@
 	margin-top: 4px;
 }
 
-.toctogglecheckbox:checked ~ .subpageNavigation {
+.toctogglecheckbox:checked ~ .subpageNavigation-tree {
     display: none;
 }
 
