--- a/resources/style_list.css
+++ b/resources/style_list.css
@@ -1,6 +1,4 @@
-/*
-@credits: https://codepen.io/asraven/pen/qbrQMX
-*/
+/* @credits: https://codepen.io/asraven/pen/qbrQMX */
 
 .directory-list ul {
 }
